# Meeting-Governance-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.py  verify.py
policies/: policies.md
scenario/: manifest.json  ontology.json  policy_guidance.json  script.json
src/governance/: agent.py  config.py  consent.py  context.py  embeddings.py  guidance.py  kg.py  llm.py  models.py  policy_tool.py  resolver.py  selfimprove.py  store.py  stt.py  topics.py  vectorstore.py  window.py
state/: lessons.json  priors.json
state/chroma/: chroma.sqlite3
tests/: offline_sim.py  test_consent.py  test_integration_offline.py  test_kg.py  test_pipeline_matrix.py  test_resolver.py  test_window.py
