[project]
name = "meeting-governance-agent"
version = "0.1.0"
description = "Real-time meeting-governance voice-AI agent: governs what gets recorded, utterance-by-utterance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",            # OpenRouter (OpenAI-compatible) — all generative LLM calls
    "deepgram-sdk>=3.7",       # real STT
    "elevenlabs>=1.8",         # TTS for scenario audio
    "chromadb>=0.5",           # local vector store (vectors stored on-device)
    "networkx>=3.3",           # in-process knowledge graph
    "pydantic>=2.8",           # structured verdict schema + validation
    "python-dotenv>=1.0",      # .env loading
    "tiktoken>=0.7",           # token-bounded window cap
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/governance"]

[tool.pytest.ini_options]
markers = [
    "live: tests that call real external APIs (OpenRouter/Deepgram); require keys",
]
